--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -2,31 +2,56 @@ name: Build app
 
 on:
   workflow_dispatch:
-  
+
 permissions:
   contents: write
   discussions: write
-  
+
 jobs:
   build:
 
     runs-on: ubuntu-latest
 
     steps:
-    - uses: actions/checkout@v4
-    - name: Set up JDK 17
-      uses: actions/setup-java@v3
-      with:
-        java-version: '17'
-        distribution: 'temurin'
-    - name: Set Up Gradle
-      uses: gradle/actions/setup-gradle@v4
-    - name: Grant execute permission for gradlew
-      run: chmod +x gradlew
-    - name: Build with Gradle
-      run: ./gradlew build
-    - name: Upload debug APK
-      uses: actions/upload-artifact@v4
-      with:
-        name: app-debug
-        path: "app/build/outputs/apk/debug/*"
+      - uses: actions/checkout@v4
+      - name: Set up JDK 17
+        uses: actions/setup-java@v3
+        with:
+          java-version: '17'
+          distribution: 'temurin'
+      - name: Set Up Gradle
+        uses: gradle/actions/setup-gradle@v4
+      - name: Grant execute permission for gradlew
+        run: chmod +x gradlew
+      - name: Build with Gradle
+        run: ./gradlew build
+      - name: Upload debug APK
+        uses: actions/upload-artifact@v4
+        with:
+          name: app-debug
+          path: "app/build/outputs/apk/debug/*"
+      - name: Sign APKs
+        uses: ilharp/sign-android-release@v1.0.4
+        with:
+          releaseDir: app/build/outputs/apk/release
+          signingKey: ${{ secrets.RELEASE_KEYSTORE }}
+          keyAlias: ${{ secrets.ALIAS }}
+          keyStorePassword: ${{ secrets.RELEASE_KEYSTORE_PASSWORD }}
+          keyPassword: ${{ secrets.RELEASE_KEYSTORE_PASSWORD }}
+      - name: Move signed APK
+        run: |
+          mkdir app/build/outputs/apk/release/out && mv app/build/outputs/apk/release/app-release-unsigned-signed.apk app/build/outputs/apk/release/out/app-release.apk
+      - name: Upload release APK
+        uses: actions/upload-artifact@v4
+        with:
+          name: app-release
+          path: "app/build/outputs/apk/release/out/*"
+      - name: GetTime
+        id: get_time
+        run: |
+          echo "TIME=$(TZ=UTC date +%s )" >> $GITHUB_OUTPUT
+      - name: Release
+        uses: softprops/action-gh-release@v2
+        with:
+          files: app/build/outputs/apk/release/out/app-release.apk
+          tag_name: ${{ steps.get_time.outputs.TIME }}
